Bug 155698 - Clear recent documents should not clear pinned items
Summary: Clear recent documents should not clear pinned items
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on: 38742
Blocks: Recent-Document-List Start-Center
  Show dependency treegraph
 
Reported: 2023-06-06 07:07 UTC by Heiko Tietze
Modified: 2024-08-02 10:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2023-06-06 07:07:30 UTC
"Clear recent documents" and "Clear unavailable files" remove all files or the currently not available, respectively. Since pinned documents are supposed to persist for some time it's likely that users want to keep them.

Removing pinned documents needs to be done either on the item itself or by unpinning first.
Comment 1 Andreas Heinisch 2023-07-26 11:43:59 UTC
It is the case in:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e912bc63ddbac584678571c85fdb74a368366874
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-AU (de_DE); UI: en-US
Calc: CL threaded
Comment 2 Commit Notification 2023-09-25 12:15:57 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/71cae3a219ff1629368b8f324d0de89afc9445e9

tdf#155698 - Start Center: Retain pinned items when clearing the list

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 BogdanB 2023-09-27 04:52:42 UTC
Working well in 24.2.
Thanks, Andreas.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: defc3dd75ff8ff937d2161237b281284240b86f0
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded