tdf#155698 - Start Center: Retain pinned items when clearing the list

Change-Id: Ife54845e020977cdb80a7fcc1fa63333afc17b32
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157169
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>