sfx2/source/dialog/backingwindow.cxx
@@ -647,7 +647,7 @@ IMPL_LINK (BackingWindow, MenuSelectHdl, const OUString&, rId, void)
 {
     if (rId == "clear_all")
     {
-        SvtHistoryOptions::Clear(EHistoryType::PickList);
+        SvtHistoryOptions::Clear(EHistoryType::PickList, false);
         mxAllRecentThumbnails->Reload();
         return;
     }
